--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mocha-node-mongo-api-test-main",
+  "name": "mocha-node-mongo-api-test2-main",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "mocha --recursive --exit"
   },
   "author": "",
